# qa-sprint-reports

./: .gitignore  403.html  404.html  500.html  AUTH_README.md  CREATE_REPORT_TESTING_SUMMARY.md  DESIGN_IMPROVEMENTS_SUMMARY.md  EVALUATION_FEATURE_SUMMARY.md  EVALUATION_FIXES_SUMMARY.md  FINAL_EVALUATION_FIXES.md  PROJECT_LOADING_FIX_SUMMARY.md  SAVE_BUTTON_VERIFICATION_REPORT.md  SPLIT_SUMMARY.md  USER_MANAGEMENT_FIX_SUMMARY.md  add_evaluation_field_migration.py  add_performance_fields_migration.py  app.py  app_original.py  app_original_backup.py  create_report.html  dashboard.html  debug_theme.html  fix_sprint_number_migration.py  index.html  login.html  maintenance.html  manage_data.html  manual_report.html  migrate_auth.py  migrate_multi_report_types.py  pending_approval.html  profile.html  project_statistics.html  pyproject.toml  register.html  report_types.html  reports.db  reports.html  reports_type.html  reset_password.html  (+14 more)
auth/: __init__.py  decorators.py
config/: config.py  email_config.py
models/: __init__.py  project.py  report.py  schemas.py  user.py
pages/: dashboard.html  project_statistics.html
routes/: __init__.py  admin_routes.py  api_routes.py  auth_routes.py  dashboard_routes.py  error_test_routes.py  main_routes.py  report_routes.py
scripts/: test_data_creation.py
services/: email_service.py
static/: Charts.js  auth.css  auth_style.css  dashboard_charts.js  enhanced_script.js  language-manager.js  manage_data.css  manage_data.js  manage_data_new.css  manage_data_new.js  manage_data_simple.js  nav.js  new_report.css  profile.css  (+13 more)
(+106 files in other folders)
