[project]
name = "project-14"
version = "0.1.0"
description = ""
authors = [
    {name = "TKM-h.almughrabi-c",email = "h.almughrabi-c@takamol.sa"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<1.0.0)",
    "flask-wtf (>=1.2.1,<2.0.0)",
    "wtforms (>=3.1.2,<4.0.0)",
    "bcrypt (>=4.1.3,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "email-validator (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
